# os

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-system.yml  build-ui.yml  kernel.yml
system/patches/linux/: 0001-feat-add-revo-board-dts.patch  0002-chore-change-board-into-2GB-memory.patch
system/toolchain/: apply_linux_patches.sh  build_linux_ci.sh
toolchain/: apply_linux_patches.sh  build_linux_ci.sh
ui/: CMakeLists.txt  Main.qml  build-test.sh  build-ui.sh  build-web.sh  main.cpp  setup-camera.sh
